fix(demo modals): fixed header overlapping for demo modals in directive examples

--- a/demo/src/assets/css/style.scss
+++ b/demo/src/assets/css/style.scss
@@ -36,8 +36,6 @@ a:hover {
   background-color: #1976d2;
   display: flex;
   flex-flow: row nowrap;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05),
-              inset 0 -1px 0 rgba(0,0,0,.1);
 
   .logo {
     color: #fff;
@@ -111,8 +109,6 @@ a:hover {
 .main {
   display: flex;
   flex-wrap: wrap;
-  position: relative;
-  z-index: 1;
 }
 /* entry */
 .entry {
@@ -309,6 +305,10 @@ a:hover {
   ng-sample-box {
     .section {
       margin-bottom: 60px;
+
+      .tooltip {
+        z-index: 999;
+      }
 
       &.bd-example {
         margin-bottom: 10px;
